[packaging] Add proper Obsolestes for qca2 packages as package was renamed to qca.
Signed-off-by: Marko Saukko <marko.saukko@jollamobile.com>

--- a/rpm/qca.yaml
+++ b/rpm/qca.yaml
@@ -15,6 +15,8 @@ PkgConfigBR:
     - QtCore < 5
 PkgBR:
     - ca-certificates
+Obsoletes:
+    - qca2 <= 2.0.3
 Requires:
     - ca-certificates
 SetupOptions: -q -n %{name}-%{version}/%{name}
@@ -30,3 +32,6 @@ SubPackages:
 
           This package contains development files for building software that uses the
           Qt Cryptographic Architecture.
+      Obsoletes:
+        - qca2-devel <= 2.0.3
+
